# cedar-folder-size-analyzer

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CI_CD_SETUP.md  Cargo.toml  GITHUB_ACTIONS_READY.md  GITHUB_CI.md  GITLAB_CI.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_RU.md  Rakefile  SETUP_COMPLETE_RU.md  build.ps1  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: build.yml  release.yml
.gitlab/: api-examples.md  runner-setup.md
.gitlab/issue_templates/: release.md
.gitlab/merge_request_templates/: default.md
icon_converter/: Cargo.toml
icon_converter/src/: main.rs
languages/: de.json  en.json  es.json  fr.json  ru.json  zh.json
scripts/: create-release.ps1
src/: i18n.rs  main.rs
wix/: License.rtf  main.wxs
