[package]
name = "baobab-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
walkdir = "2.5"
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

