[package]
name = "cedar-folder-size-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Orlov <orelcokolov@gmail.com>"]
license = "Freeware"
description = "Cedar Folder Size Analyzer - Disk space analyzer for Windows"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
egui-phosphor = "0.7"
sysinfo = "0.32"
rfd = "0.15"
rayon = "1.10"
trash = "5.1"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
usvg = "0.44"
tiny-skia = "0.11"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

